tests/invalid_inputs/sema/weird_call.cpp

int main() {
	// callee is something that doesn't make sense
	(5+6)('c', 'a');
}
